infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uneaty
  labels:
    name: uneaty
    environment: ${environment}
